# misc

./: .gitignore  Pipfile  README.md  linmix.ipynb  percentiles2d.py  pyproject.toml  regmix.ipynb  regmix.py  run_model_classification.py  run_two_models.py  run_two_models_bayes.py  two_models.py  utils_dirichlet.py
images/regmix/: compare_loo.html  compare_waic.html
results/: README.md  summary_ncmp=1.html
results/favor_few_is_true/: summary_ncmp=2.html  summary_ncmp=3.html  summary_ncmp=4.html  summary_ncmp=8.html
results/pmin=10pct_favor_few_is_false/: summary_ncmp=2.html  summary_ncmp=3.html  summary_ncmp=4.html
results/pmin=none_favor_few_is_false/: summary_ncmp=2.html  summary_ncmp=3.html  summary_ncmp=4.html
