[project]
name = "misc"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Sonne",email = "mrsonne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "bokeh (>=3.7.3,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
